Update the manifest.

--- a/custom_components/pwrstat/manifest.json
+++ b/custom_components/pwrstat/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "pwrstat",
-  "name": "pwrstat (Cyberpower cli) Support",
+  "name": "pwrstat (Cyberpower) Support",
   "codeowners": [
     "@twrecked"
   ],
